examples/test/testpolicy18773.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18773
  namespace: namespace144
spec:
  podSelector:
    matchLabels:
      key44: value4
      key13: value0
      key46: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value30
          key10: value43
      podSelector:
        matchLabels:
          key1: value49
          key30: value46
          key11: value49
